responsive updates and pagination

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -40,6 +40,7 @@
       <select id="itemsPerPage" [(ngModel)]="itemsPerPage" (change)="onItemsPerPageChange()">
         <option value="5">5</option>
         <option value="10">10</option>
+        <option value="15">15</option>
         <option value="20">20</option>
       </select>
     </div>
